# task-manager

./: .gitignore  Makefile  README.md  db.sqlite3  pyproject.toml
.github/workflows/: self-check.yml
apps/core/: mixins.py  tests.py  views.py
apps/labels/: forms.py  models.py  tests.py  urls.py  views.py
apps/labels/migrations/: 0001_initial.py  0002_rename_timestamp_label_created_at.py  0003_alter_label_name.py  0004_alter_label_created_at_alter_label_name.py
apps/statuses/: forms.py  models.py  tests.py  urls.py  views.py
apps/statuses/migrations/: 0001_initial.py  0002_rename_timestamp_status_created_at.py  0003_alter_status_name.py  0004_alter_status_created_at_alter_status_name.py
apps/tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
apps/tasks/migrations/: 0001_initial.py  0002_alter_task_options.py  0003_alter_task_options_alter_task_creator_and_more.py  0004_alter_task_created_at.py
apps/users/: forms.py  models.py  tests.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_delete_user.py
task_manager/: mixins.py  settings.py  urls.py  views.py
task_manager/locale/en/LC_MESSAGES/: django.po
task_manager/locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/templates/: base.html  create.html  form.html  index.html  labels.html  login.html  register.html  statuses.html  tasks.html  users.html
task_manager/templates/apps/labels/: create.html  delete.html  labels.html  update.html
task_manager/templates/apps/statuses/: create.html  delete.html  statuses.html  update.html
task_manager/templates/apps/tasks/: create.html  delete.html  task.html  tasks.html  update.html
task_manager/templates/apps/users/: create.html  delete.html  login.html  update.html  users.html
task_manager/templates/errors/: 404.html
task_manager/templates/includes/: footer.html  nav.html
