[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Egor Gerimovich <cherund@gmail.com>"]
readme = "README.md"
packages = [{include="task_manager"},]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
django = "^5.0.7"
python-dotenv = "^1.0.1"
flake8 = "^7.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
